--- a/page.html
+++ b/page.html
@@ -35,5 +35,5 @@
             <img src="img/css.png" alt="" class="logos logos2" id="css">
         </div>
     </div>
-    <script src="website.js"></script>
+    <script src="page.js"></script>
 </body>
